<resources>
    <string name="app_name">Admin Better Cotton</string>

    <string name="title_schedule">Schedule</string>
    <string name="title_home">Home</string>
    <string name="title_report">Report</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tittle_user_list">User List</string>
    <string name="tittle_create_task">Create Task</string>
    <string name="setting">Setting</string>
    <string name="log_out">Logout</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="cancel">Cancel</string>
    <string name="logout_message">Are You Sure Want To Logout</string>

    <string name="task_status">Task Status</string>
    <string name="growth_chart">Growth Chart</string>

    <string name="total_task_allotted">Total Task Allotted</string>
    <string name="task_in_progress">Task In Progress</string>
    <string name="task_completed">Task Completed</string>
    <string name="better_connect">Better Cotton</string>
    <string name="mobile_number_verification">Mobile Number Verification</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="review_the_activity_status">Review The Activity Status</string>
    <string name="tasks_list">Tasks List</string>
    <string name="assign_task">+ Assign Task</string>
    <string name="filter">Filter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_allot_the_task">Let\'s Allot The Task</string>
    <string name="title">Title</string>
    <string name="filed_facilitator">Field Facilitator</string>
    <string name="select_field_facilitator">Select Field Facilitator</string>
    <string name="activity">Activity</string>
    <string name="select_activity">Select Activity</string>
    <string name="sub_activity">SubActivity</string>
    <string name="select_sub_activity">Select SubActivity</string>
    <string name="mode_of_training">Mode of Training</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="assign_the_task">Assign The Task</string>
    <string name="create_user">+ Create User</string>
    <string name="create_users">Create User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="work_station">Work Station</string>
    <string name="post">Post</string>
    <string name="emp_id_number">Emp Id Number</string>
    <string name="report_authority">Report Authority</string>
    <string name="joining_date">Joining Date</string>
    <string name="create_task">Create Task</string>
    <string name="oops_n_no_internet_connection_n_please_check_your_connection">OOPS!\n No Internet Connection \n Please Check Your Connection</string>
    <string name="retry">Retry</string>
    <string name="project_manager">Project Manager</string>
    <string name="pu_manager">PU Manager</string>
    <string name="project_coordinator">Project Coordinator</string>
    <string name="field_facilitator">Field Facilitator</string>

    <string name="date_combine_string">%1$s To %2$s</string>
    <string name="activity_combine_String">%1$s  -  %2$s</string>
    <string name="units_combine_String">%1$s / %2$s</string>
    <string name="pending_task">Pending Task</string>
    <string name="let_s_create_the_task">Let\'s Create The Task</string>
    <string name="task_name">Task Name</string>
    <string-array name="graph_selector">
        <item>Farmer Training</item>
        <item>Farm Labour Training</item>
        <item>Co-Farmers Training</item>
        <item>Disadvantaged Group Training</item>
        <item>Farmers Field Visit</item>
        <item>Farmers Home Visit</item>
        <item>Demo Observation</item>
        <item>Field Demonstration</item>
        <item>Field Day Event</item>
        <item>Data Collection</item>
        <item>Survey</item>
        <item>TCD</item>
        <item>Vermi Compost</item>
        <item>Soil Testing</item>
        <item>Meeting</item>
        <item>Farmers Feedback</item>
        <item>Audio Campaigning</item>
        <item>Water Budgeting Exercise</item>
        <item>Adoption Data Collection</item>
        <item>IPNM</item>
        <item>Goat Unit</item>
        <item>Backyard Poultry </item>
        <item>Drum Support </item>
        <item>PPE kit Support </item>
        <item>Demo Support </item>
        <item>Drip Irrigation </item>
        <item>Plantation </item>
        <item>Vegetable Cultivation </item>
        <item>Waste Decomposer</item>
    </string-array>
</resources>